--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div>
         <figure id="cat" draggable="true">
             <img src="https://cdn-icons-png.flaticon.com/256/7749/7749446.png" alt="">
-            <figcaption>
+            <!-- <figcaption>
                 <a href="https://www.flaticon.com/free-stickers/animals" title="animals stickers">Animals stickers
                     created by DinosoftLabs - Flaticon</a>
-            </figcaption>
+            </figcaption> -->
         </figure>
     </div>
     <div></div>
